--- a/android/MobiTrack/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/android/MobiTrack/app/src/main/res/menu/nav_drawer_menu.xml
@@ -6,8 +6,9 @@
         android:id="@+id/getMyLocation"
         android:title="Get My Location" />
     <item
-    android:id="@+id/nearByLcoation"
+    android:id="@+id/nearByLocation"
     android:title="Near by Location" />
+
     <item
         android:id="@+id/shareLocation"
         android:title="Share Location" />
