--- a/android/MobiTrack/app/src/main/res/layout/fragment_share_location.xml
+++ b/android/MobiTrack/app/src/main/res/layout/fragment_share_location.xml
@@ -3,12 +3,328 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShareLocation">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".GetMyLocation">
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:fillViewport="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:weightSum="3"
+                android:layout_marginLeft="28dp"
+                android:layout_marginTop="10dp"
+                >
+
+                <TextView
+                    android:layout_margin="16dp"
+                    android:layout_width="0dp"
+                    android:layout_weight="2.6"
+                    android:layout_height="wrap_content"
+                    android:text="Share To"
+                    android:textColor="?colorPrimary"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    />
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_height="40dp"
+                    android:background="@drawable/add"
+                    />
+
+            </LinearLayout>
+            
+            <androidx.cardview.widget.CardView
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                android:layout_width="360dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="8dp"
+                android:layout_height="60dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:weightSum="3"
+                    android:background="@color/bgcard"
+                    >
+
+                    <TextView
+                        android:layout_margin="16dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="2.8"
+                        android:layout_height="wrap_content"
+                        android:text="Ritik"
+                        android:textColor="?colorPrimary"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        />
+
+                    <ImageView
+                        android:layout_width="40dp"
+
+                        android:layout_gravity="center_vertical"
+                        android:layout_height="40dp"
+
+                        android:background="@drawable/remove"
+                        />
+
+
+
+
+
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_gravity="center"
+                android:layout_marginTop="24dp"
+                android:layout_width="360dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="8dp"
+                android:layout_height="60dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:weightSum="3"
+                    android:background="@color/bgcard"
+                    >
+
+                    <TextView
+                        android:layout_margin="16dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="2.8"
+                        android:layout_height="wrap_content"
+                        android:text="Ritik"
+                        android:textColor="?colorPrimary"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        />
+
+                    <ImageView
+                        android:layout_width="40dp"
+
+                        android:layout_gravity="center_vertical"
+                        android:layout_height="40dp"
+
+                        android:background="@drawable/remove"
+                        />
+
+
+
+
+
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_gravity="center"
+                android:layout_marginTop="24dp"
+                android:layout_width="360dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="8dp"
+                android:layout_height="60dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:weightSum="3"
+                    android:background="@color/bgcard"
+                    >
+
+                    <TextView
+                        android:layout_margin="16dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="2.8"
+                        android:layout_height="wrap_content"
+                        android:text="Ritik"
+                        android:textColor="?colorPrimary"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        />
+
+                    <ImageView
+                        android:layout_width="40dp"
+
+                        android:layout_gravity="center_vertical"
+                        android:layout_height="40dp"
+
+                        android:background="@drawable/remove"
+                        />
+
+
+
+
+
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_gravity="center"
+                android:layout_marginTop="24dp"
+                android:layout_width="360dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="8dp"
+                android:layout_height="60dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:weightSum="3"
+                    android:background="@color/bgcard"
+                    >
+
+                    <TextView
+                        android:layout_margin="16dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="2.8"
+                        android:layout_height="wrap_content"
+                        android:text="Ritik"
+                        android:textColor="?colorPrimary"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        />
+
+                    <ImageView
+                        android:layout_width="40dp"
+
+                        android:layout_gravity="center_vertical"
+                        android:layout_height="40dp"
+
+                        android:background="@drawable/remove"
+                        />
+
+
+
+
+
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_gravity="center"
+                android:layout_marginTop="24dp"
+                android:layout_width="360dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="8dp"
+                android:layout_height="60dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:weightSum="3"
+                    android:background="@color/bgcard"
+                    >
+
+                    <TextView
+                        android:layout_margin="16dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="2.8"
+                        android:layout_height="wrap_content"
+                        android:text="Ritik"
+                        android:textColor="?colorPrimary"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        />
+
+                    <ImageView
+                        android:layout_width="40dp"
+
+                        android:layout_gravity="center_vertical"
+                        android:layout_height="40dp"
+
+                        android:background="@drawable/remove"
+                        />
+
+
+
+
+
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_gravity="center"
+                android:layout_marginTop="24dp"
+                android:layout_width="360dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="8dp"
+                android:layout_height="60dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:weightSum="3"
+                    android:background="@color/bgcard"
+                    >
+
+                    <TextView
+                        android:layout_margin="16dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="2.8"
+                        android:layout_height="wrap_content"
+                        android:text="Ritik"
+                        android:textColor="?colorPrimary"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        />
+
+                    <ImageView
+                        android:layout_width="40dp"
+
+                        android:layout_gravity="center_vertical"
+                        android:layout_height="40dp"
+
+                        android:background="@drawable/remove"
+                        />
+
+
+
+
+
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+
+
+        </LinearLayout>
+    </ScrollView>
+
 
 </FrameLayout>
