--- a/android/MobiTrack/app/src/main/res/layout/fragment_get_my_location.xml
+++ b/android/MobiTrack/app/src/main/res/layout/fragment_get_my_location.xml
@@ -34,7 +34,7 @@
                 android:id="@+id/getMyLocationBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
+                android:fontFamily="@font/montserrat"
                 android:layout_marginTop="180dp"
                 android:layout_marginBottom="24dp"
                 android:background="?colorPrimary"
