--- a/android/MobiTrack/app/src/main/res/layout/fragment_get_my_location_final.xml
+++ b/android/MobiTrack/app/src/main/res/layout/fragment_get_my_location_final.xml
@@ -40,7 +40,7 @@
     >
 
     <TextView
-
+        android:fontFamily="@font/montserrat"
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,6 +50,7 @@
         />
 
     <TextView
+        android:fontFamily="@font/montserrat"
         android:layout_marginTop="16dp"
         android:textAlignment="center"
         android:layout_width="match_parent"
@@ -59,6 +60,7 @@
         android:textSize="20sp"
         />
     <TextView
+        android:fontFamily="@font/montserrat"
     android:layout_marginTop="16dp"
     android:textAlignment="center"
     android:layout_width="match_parent"
@@ -68,6 +70,7 @@
     android:textSize="20sp"
     />
     <TextView
+        android:fontFamily="@font/montserrat"
     android:layout_marginTop="16dp"
     android:textAlignment="center"
     android:layout_width="match_parent"
