--- a/android/MobiTrack/app/src/main/res/layout/fragment_share_location.xml
+++ b/android/MobiTrack/app/src/main/res/layout/fragment_share_location.xml
@@ -26,6 +26,7 @@
                 >
 
                 <TextView
+                    android:fontFamily="@font/montserrat"
                     android:layout_margin="16dp"
                     android:layout_width="0dp"
                     android:layout_weight="2.6"
@@ -63,6 +64,7 @@
                     >
 
                     <TextView
+                        android:fontFamily="@font/montserrat"
                         android:layout_margin="16dp"
                         android:layout_width="0dp"
                         android:layout_weight="2.8"
@@ -93,7 +95,7 @@
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:layout_gravity="center"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:layout_width="360dp"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="8dp"
@@ -109,6 +111,7 @@
                     >
 
                     <TextView
+                        android:fontFamily="@font/montserrat"
                         android:layout_margin="16dp"
                         android:layout_width="0dp"
                         android:layout_weight="2.8"
@@ -139,7 +142,7 @@
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:layout_gravity="center"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:layout_width="360dp"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="8dp"
@@ -155,6 +158,7 @@
                     >
 
                     <TextView
+                        android:fontFamily="@font/montserrat"
                         android:layout_margin="16dp"
                         android:layout_width="0dp"
                         android:layout_weight="2.8"
@@ -185,7 +189,7 @@
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:layout_gravity="center"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:layout_width="360dp"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="8dp"
@@ -201,6 +205,7 @@
                     >
 
                     <TextView
+                        android:fontFamily="@font/montserrat"
                         android:layout_margin="16dp"
                         android:layout_width="0dp"
                         android:layout_weight="2.8"
@@ -231,7 +236,7 @@
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:layout_gravity="center"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:layout_width="360dp"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="8dp"
@@ -247,6 +252,7 @@
                     >
 
                     <TextView
+                        android:fontFamily="@font/montserrat"
                         android:layout_margin="16dp"
                         android:layout_width="0dp"
                         android:layout_weight="2.8"
@@ -277,7 +283,7 @@
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:layout_gravity="center"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:layout_width="360dp"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="8dp"
@@ -293,6 +299,7 @@
                     >
 
                     <TextView
+                        android:fontFamily="@font/montserrat"
                         android:layout_margin="16dp"
                         android:layout_width="0dp"
                         android:layout_weight="2.8"
