--- a/android/MobiTrack/app/src/main/res/layout/fragment_share_location.xml
+++ b/android/MobiTrack/app/src/main/res/layout/fragment_share_location.xml
@@ -328,6 +328,21 @@
 
 
             </androidx.cardview.widget.CardView>
+            <Button
+                android:id="@+id/getNearByLocationBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="48dp"
+                android:background="?colorPrimary"
+                android:gravity="center"
+                android:padding="16dp"
+                android:fontFamily="@font/montserrat"
+                android:text="Broadcast Location"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+
+                />
 
 
         </LinearLayout>
